--- a/index.html
+++ b/index.html
@@ -5,5 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- navigation -->
+      <nav>
+        <a href=""><img src="" alt="" /></a>
+        <ul>
+          <li>
+            <a href="" target="_blank" rel="noopener noreferrer">Studio</a>
+          </li>
+          <li>
+            <a href="" target="_blank" rel="noopener noreferrer">Portfolio</a>
+          </li>
+          <li>
+            <a href="" target="_blank" rel="noopener noreferrer">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1></h1>
+        <button></button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3></h3>
+          </li>
+          <li>
+            <h3></h3>
+          </li>
+          <li>
+            <h3></h3>
+          </li>
+          <li>
+            <h3></h3>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2></h2>
+        <ul>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+        </ul>
+      </section>
+      <footer>
+        <img src="" alt="" />
+        <p></p>
+      </footer>
+    </main>
+  </body>
 </html>
