--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <header>
       <!-- navigation -->
+
       <nav>
-        <a href=""><img src="" alt="" /></a>
+        <a href=""><img src="./images/webstudio-Logo.svg" alt="" /></a>
         <ul>
           <li>
             <a href="" target="_blank" rel="noopener noreferrer">Studio</a>
@@ -28,10 +29,11 @@
       </ul>
     </header>
     <main>
-      <section>
-        <h1></h1>
-        <button></button>
-      </section>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button"></button>
+
+      <!-- section -->
+
       <section>
         <ul>
           <li>
@@ -57,6 +59,9 @@
           <li><img src="" alt="" /></li>
         </ul>
       </section>
+
+      <!-- Footer -->
+
       <footer>
         <img src="" alt="" />
         <p></p>
