--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
   <body>
     <header>
       <!-- navigation -->
-
       <nav>
-        <a href=""><img src="./images/webstudio-Logo.svg" alt="" /></a>
+        <a href="">
+          <img
+            src="./images/webstudio-Logo.svg"
+            alt="webstudio-Logo"
+            width="115"
+            height="24"
+          />
+        </a>
         <ul>
           <li>
             <a href="" target="_blank" rel="noopener noreferrer">Studio</a>
@@ -23,48 +29,91 @@
           </li>
         </ul>
       </nav>
+      <!-- Contakts -->
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
+
+    <!-- Main content -->
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button"></button>
-
+      <div>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </div>
       <!-- section -->
-
       <section>
         <ul>
           <li>
-            <h3></h3>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
-            <h3></h3>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li>
-            <h3></h3>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li>
-            <h3></h3>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
       <section>
-        <h2></h2>
+        <h2>Our Team</h2>
         <ul>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
-          <li><img src="" alt="" /></li>
+          <li>
+            <img src="./images/TeamCard-1.jpg" alt="TeamCard-1" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/TeamCard-2.jpg" alt="TeamCard-2" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/TeamCard-3.jpg" alt="TeamCard-3" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/TeamCard-4.jpg" alt="TeamCard-4" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
 
       <!-- Footer -->
 
       <footer>
-        <img src="" alt="" />
-        <p></p>
+        <img
+          src="./images/webstudio-Logo.svg"
+          alt="webstudio-Logo"
+          width="115"
+          height="24"
+        />
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </footer>
     </main>
   </body>
