--- a/index.html
+++ b/index.html
@@ -100,21 +100,19 @@
           </li>
         </ul>
       </section>
-
-      <!-- Footer -->
-
-      <footer>
-        <img
-          src="./images/webstudio-Logo.svg"
-          alt="webstudio-Logo"
-          width="115"
-          height="24"
-        />
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </footer>
     </main>
   </body>
+  <!-- Footer -->
+  <footer>
+    <img
+      src="./images/webstudio-Logo.svg"
+      alt="webstudio-Logo"
+      width="115"
+      height="24"
+    />
+    <p>
+      Increase the flow of customers and sales for your business with digital
+      marketing & growth solutions.
+    </p>
+  </footer>
 </html>
