--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <header>
       <!-- navigation -->
       <nav>
-        <a href="">
-          <img
-            src="./images/webstudio-Logo.svg"
-            alt="webstudio-Logo"
-            width="115"
-            height="24"
-          />
-        </a>
+        <a href="/index.html">WEB Studio</a>
         <ul>
           <li>
             <a href="" target="_blank" rel="noopener noreferrer">Studio</a>
@@ -30,20 +23,24 @@
         </ul>
       </nav>
       <!-- Contakts -->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <!-- Main content -->
     <main>
-      <div>
+      <!-- Section 1 -->
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </div>
-      <!-- section -->
+      </section>
+      <!-- section 2 -->
       <section>
+        <h2>Invisible</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -75,26 +72,27 @@
           </li>
         </ul>
       </section>
+      <!-- Section 3 -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/TeamCard-1.jpg" alt="TeamCard-1" />
+            <img src="./images/TeamCard-1.jpg" alt="TeamCard-1" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/TeamCard-2.jpg" alt="TeamCard-2" />
+            <img src="./images/TeamCard-2.jpg" alt="TeamCard-2" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/TeamCard-3.jpg" alt="TeamCard-3" />
+            <img src="./images/TeamCard-3.jpg" alt="TeamCard-3" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/TeamCard-4.jpg" alt="TeamCard-4" />
+            <img src="./images/TeamCard-4.jpg" alt="TeamCard-4" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -104,12 +102,7 @@
   </body>
   <!-- Footer -->
   <footer>
-    <img
-      src="./images/webstudio-Logo.svg"
-      alt="webstudio-Logo"
-      width="115"
-      height="24"
-    />
+    <a href="/index.html">WEB Studio</a>
     <p>
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
