--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <!-- navigation -->
       <nav>
-        <a href="/index.html">WEB Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="" target="_blank" rel="noopener noreferrer">Studio</a>
@@ -100,7 +100,7 @@
       </section>
     </main>
     <footer>
-      <a href="/index.html">WEB Studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
