--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -40,7 +40,7 @@
       </section>
       <!-- section 2 -->
       <section>
-        <h2>Invisible</h2>
+        <h2>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -99,6 +99,7 @@
         </ul>
       </section>
     </main>
+    <!-- Footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
@@ -107,5 +108,4 @@
       </p>
     </footer>
   </body>
-  <!-- Footer -->
 </html>
